--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,14 @@
 			<version>2.17.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 	</dependencies>
 </project>
